Increase size of graph window Prevents the scrollbar from covering the arrows

--- a/app/assets/stylesheets/graphs.scss
+++ b/app/assets/stylesheets/graphs.scss
@@ -6,7 +6,7 @@
   overflow: hidden;
 
   .scroll-window {
-    height:300px;
+    height: 320px;
     overflow: scroll;
   }
 
